Fixed JS row select bug for linking

--- a/ledger/templates/api/views/journal-entry-view.html
+++ b/ledger/templates/api/views/journal-entry-view.html
@@ -6,4 +6,7 @@
         {{ table_and_form }}
     </div>
 
+{% block extra_js %}
+{% include "api/components/clickable-row-script.html" %}
+{% endblock %}
 
