Accept commas and return commas for taxes

--- a/ledger/templates/api/entry_forms/edit-tax-charge-form.html
+++ b/ledger/templates/api/entry_forms/edit-tax-charge-form.html
@@ -45,7 +45,7 @@
                                 name="amount"
                                 id="id_amount"
                                 class="form-control"
-                                value="{% if form.amount.value %}{{ form.amount.value }}{% else %}0.00{% endif %}"
+                                value="{% if form.amount.value %}{{ form.amount.value|intcomma }}{% else %}0.00{% endif %}"
                             >
                         </div>
                     </div>
