--- a/ledger/templates/api/entry_forms/transaction-form.html
+++ b/ledger/templates/api/entry_forms/transaction-form.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 <div class="row">
     <div class="col-md-6">
         <form
@@ -38,7 +39,7 @@
                         <div class="input-group-prepend">
                             <div class="input-group-text">$</div>
                         </div>
-                        <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}" class="form-control" value="{{ form.amount.value|default_if_none:'' }}" placeholder="{{ form.amount.label }}">
+                        <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}" class="form-control" value="{{ form.amount.value|default_if_none:''|intcomma }}" placeholder="{{ form.amount.label }}">
                     </div>
                 </div>
             </div>
