--- a/ledger/templates/api/tables/tax-table.html
+++ b/ledger/templates/api/tables/tax-table.html
@@ -18,7 +18,7 @@
             {% for tax_charge in tax_charges %}
                 <tr class="clickable-row" hx-get="{% url 'tax-form-bound' pk=tax_charge.pk %}" hx-target="#form-container">
                     <td>{{ tax_charge.type }}</td>
-                    <td>{{ tax_charge.transaction }}</td>
+                    <td>{{ tax_charge.transaction_string }}</td>
                     <td>{{ tax_charge.date }}</td>
                     <td>${{ tax_charge.amount|floatformat:2|intcomma }}</td>
                     <td>${{ tax_charge.taxable_income|floatformat:2|intcomma }}</td>
