Successfully uploaded to s3 bucket

--- a/ledger/templates/api/content/journal-entry-content.html
+++ b/ledger/templates/api/content/journal-entry-content.html
@@ -1,6 +1,9 @@
 {{ table }}
 {% include "api/components/clickable-row-script.html" %}
 {% include "api/components/transactions-scroll.html" %}
+<div id="textract">
+    {{ textract_form }}
+</div>
 <div id="form-div">
     {{ entry_form }}
 </div>
