Updated upload page

--- a/ledger/templates/api/entry_forms/textract-form.html
+++ b/ledger/templates/api/entry_forms/textract-form.html
@@ -1,5 +1,6 @@
 <div class="row">
-    <div class="col-md-4">
+    <div class="col">
+        <h3>Upload transaction Paystubs</h3>
         <form
             method="post"
             enctype="multipart/form-data"
@@ -7,9 +8,7 @@
             hx-trigger="submit"
         >
         {% csrf_token %}
-            <!-- Render the 'transaction_csv' field -->
             <div class="mb-3">
-                <label for="id_document" class="form-label">CSV</label>
                 <input type="file" name="document" id="id_document" class="form-control-file">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
