--- a/ledger/templates/api/entry_forms/upload-form.html
+++ b/ledger/templates/api/entry_forms/upload-form.html
@@ -1,10 +1,13 @@
+{% load humanize %}
+
 <div class="row">
-    <div class="col-md-4">
+    <div class="col">
+        <h3>Upload transaction CSVs</h3>
         <form
             method="post"
             enctype="multipart/form-data"
             hx-post="{% url 'upload-transactions' %}"
-            hx-target="#container"
+            hx-target="#csv-upload"
             hx-trigger="submit"
         >
         {% csrf_token %}
@@ -20,7 +23,6 @@
 
             <!-- Render the 'transaction_csv' field -->
             <div class="mb-3">
-                <label for="id_transaction_csv" class="form-label">CSV</label>
                 <input type="file" name="transaction_csv" id="id_transaction_csv" class="form-control-file">
             </div>
 
@@ -28,3 +30,39 @@
         </form>
     </div>
 </div>
+<br>
+{% if change %}
+<div class="row">
+    <div class="col">
+        {% if change == "create" %}
+        <div class="alert alert-success" role="alert">
+            <small>Added transaction</small>
+        </div>
+        {% elif change == "update" %}
+        <div class="alert alert-success" role="alert">
+            <small>Updated transaction</small>
+        </div>
+        {% elif change == "delete" %}
+        <div class="alert alert-danger" role="alert">
+            <small>Deleted transaction</small>
+        </div>
+        {% endif %}
+
+        <div class="card">
+            <div class="card-body">
+                <p class="card-text small" style="margin-bottom: 10px;"><strong>Date:</strong> {{ created_transaction.date }}</p>
+                <p class="card-text small" style="margin-bottom: 10px;">
+                    <strong>Amount:</strong>
+                    {% if transaction.amount < 0 %}
+                        -${{ created_transaction.amount|floatformat:2|intcomma|cut:"-" }}
+                    {% else %}
+                        ${{ created_transaction.amount|floatformat:2|intcomma }}
+                    {% endif %}
+                </p>
+                <p class="card-text small" style="margin-bottom: 10px;"><strong>Description:</strong> {{ created_transaction.description }}</p>
+                <p class="card-text small" style="margin-bottom: 10px;"><strong>Account:</strong> {{ created_transaction.account }}</p>
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
