--- a/ledger/templates/api/views/upload-transactions.html
+++ b/ledger/templates/api/views/upload-transactions.html
@@ -1,11 +1,14 @@
-<h2>Upload transactions</h2>
-
-{{ form }}
-
-{{ success }}
-<div id="textract">
-    {{ textract_form }}
+<h2>Upload Files</h2>
+<br><br>
+<div class="row">
+    <div id="csv-upload" class="col-md-4">
+        {{ form }}
+    </div>
+    <div id="textract" class="col-md-4">
+        {{ textract_form }}
+    </div>
 </div>
+
 <br>
 <div class="row">
     <div class="col">
