--- a/ledger/templates/api/entry_forms/textract-form.html
+++ b/ledger/templates/api/entry_forms/textract-form.html
@@ -11,7 +11,7 @@
             <div class="mb-3">
                 <input type="file" name="document" id="id_document" class="form-control-file">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" name="paystubs" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
