--- a/ledger/templates/api/entry_forms/upload-form.html
+++ b/ledger/templates/api/entry_forms/upload-form.html
@@ -26,7 +26,7 @@
                 <input type="file" name="transaction_csv" id="id_transaction_csv" class="form-control-file">
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" name="transactions" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
