--- a/ledger/templates/api/views/journal-entry-view.html
+++ b/ledger/templates/api/views/journal-entry-view.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-md-4">
             <div id="paystubs">
-                paystub placeholder
+                {{ paystubs_table }}
             </div>
         </div>
     </div>
