--- a/ledger/templates/api/tables/transactions-table-new.html
+++ b/ledger/templates/api/tables/transactions-table-new.html
@@ -20,6 +20,7 @@
                         hx-get="{{ row_url }}form/{{ transaction.id }}/?row_index={{ forloop.counter0 }}"
                         hx-target="#form-div"
                         data-transaction-id="{{ transaction.id }}"
+                        @click="selectedRowId = {{ transaction.id }}; rowIndex = {{ forloop.counter0 }}"
                     >
                         <td>{{ transaction.date }}</td>
                         <td>{{ transaction.account }}</td>
