--- a/ledger/templates/api/views/journal-entry-view.html
+++ b/ledger/templates/api/views/journal-entry-view.html
@@ -3,26 +3,26 @@
 <h2>Journal Entries</h2>
 
 {{ filter_form }}
-
-<div id="table-and-form">
-    <div class="row">
-        <div class="col-md-12">
-            <div id="table">
-                {{ table }}
+<div x-data="{ selectedRowId: {{transaction_id}}, rowIndex: {{index}} }">
+    <div id="table-and-form">
+        <div class="row">
+            <div class="col-md-12">
+                <div id="table">
+                    {{ table }}
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-8">
-            <div id="form-div">
-                {{ entry_form }}
+        <div class="row">
+            <div class="col-md-8">
+                <div id="form-div">
+                    {{ entry_form }}
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div id="paystubs">
-                {{ paystubs_table }}
+            <div class="col-md-4">
+                <div id="paystubs">
+                    {{ paystubs_table }}
+                </div>
             </div>
         </div>
     </div>
 </div>
-
