Only load JE scrips on initial page load

--- a/ledger/templates/api/views/journal-entry-view.html
+++ b/ledger/templates/api/views/journal-entry-view.html
@@ -1,5 +1,7 @@
-{% include "api/components/clickable-row-script.html" %}
-{% include "api/components/transactions-scroll.html" %}
+{% if is_initial_load %}
+    {% include "api/components/clickable-row-script.html" %}
+    {% include "api/components/transactions-scroll.html" %}
+{% endif %}
 <h2>Journal Entries</h2>
 
 {{ filter_form }}
