--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -57,15 +57,12 @@
                 </div>
                 <div class="col-md-4">
                     <input
-                        type="text"
+                        type="number"
+                        step="0.01"
                         class="form-control {% if form.amount.errors %}is-invalid{% endif %}"
                         name="{{ form.amount.html_name }}"
                         id="{{ form.amount.auto_id }}"
-                        {% if form_errors %}
                         value="{{ form.amount.value }}"
-                        {% else %}
-                        value="{% if form.amount.value == 0 %}0.00{% elif form.amount.value %}{{ form.amount.value|stringformat:'f'|floatformat:2|intcomma }}{% else %}0.00{% endif %}"
-                        {% endif %}
                         tabindex="{{ forloop.counter|multiply:4|add:2 }}"
                     >
                     <div class="invalid-feedback">
@@ -110,16 +107,13 @@
                 </div>
                 <div class="col-md-4">
                     <input
-                        type="text"
+                        type="number"
+                        step="0.01"
                         class="form-control {% if form.amount.errors %}is-invalid{% endif %}"
                         name="{{ form.amount.html_name }}"
                         id="{{ form.amount.auto_id }}"
-                        {% if form_errors %}
                         value="{{ form.amount.value }}"
-                        {% else %}
-                        value="{% if form.amount.value == 0 %}0.00{% elif form.amount.value %}{{ form.amount.value|stringformat:'f'|floatformat:2|intcomma }}{% else %}0.00{% endif %}"
-                        {% endif %}
-                        tabindex="{{ forloop.counter|multiply:4|add:4 }}"
+                        tabindex="{{ forloop.counter|multiply:4|add:2 }}"
                     >
                     <div class="invalid-feedback">
                         {% for error in form.amount.errors %}
