--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -10,8 +10,8 @@
     hx-include="#transactions-filter-form"
 >
     {% csrf_token %}
-    <input type="hidden" name="index" value="{{ index }}">
-    <input type="hidden" name="paystub_id" value="{{ paystub_id }}">
+    {{ metadata_form.index }}
+    {{ metadata_form.paystub_id }}
     <div class="row">
         <div class="col-12">
             <input type="submit" value="Submit" class="btn btn-primary mt-3" />
