--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -29,7 +29,7 @@
         <div class="col-md-6">
             <h3>Debits</h3>
             {{ debit_formset.management_form }}
-            <small>Total Debits: $<span id="totalDebits">{{ prefilled_total|floatformat:2|intcomma }}</span></small>
+            <small>Total Debits: $<span id="totalDebits">{{ debit_prefilled_total|floatformat:2|intcomma }}</span></small>
             {% for form in debit_formset %}
             <div class="row">
                 <div class="col-md-8">
@@ -79,7 +79,7 @@
         <div class="col-md-6">
             <h3>Credits</h3>
             {{ credit_formset.management_form }}
-            <small>Total Credits: $<span id="totalCredits">{{ prefilled_total|floatformat:2|intcomma }}</span></small>
+            <small>Total Credits: $<span id="totalCredits">{{ credit_prefilled_total|floatformat:2|intcomma }}</span></small>
             {% for form in credit_formset %}
             <div class="row">
                 <div class="col-md-8">
