Fixed table highlighting issue

--- a/ledger/templates/api/filter_forms/transactions-filter-form.html
+++ b/ledger/templates/api/filter_forms/transactions-filter-form.html
@@ -4,6 +4,7 @@
     hx-get="{{ get_url }}"
     hx-target="#table-and-form"
     hx-trigger="submit"
+    hx-swap="outerHTML"
     class="mb-3 form-sm"
 >
     <div class="row g-3">
