--- a/ledger/templates/api/tables/transactions-table-new.html
+++ b/ledger/templates/api/tables/transactions-table-new.html
@@ -35,3 +35,5 @@
         </div>
     </div>
 </div>
+{% include "api/components/clickable-row-script.html" %}
+{% include "api/components/transactions-scroll.html" %}
