Fixed transactions bug

--- a/ledger/templates/api/content/transactions-content.html
+++ b/ledger/templates/api/content/transactions-content.html
@@ -1,5 +1,7 @@
-{{ table }}
-<br>
-<div id="form-div">
-{{ transactions_form }}
+<div id="table-and-form">
+    {{ table }}
+    <br>
+    <div id="form-div">
+    {{ transactions_form }}
+    </div>
 </div>
