Matching update on linking form view

--- a/ledger/templates/api/content/transactions-link-content.html
+++ b/ledger/templates/api/content/transactions-link-content.html
@@ -1,5 +1,7 @@
-{{ table }}
-{% include "api/components/two-row-select-script.html" %}
-<div id="link-form">
-    {{ link_form }}
+<div id="table-and-form">
+    {{ table }}
+    {% include "api/components/two-row-select-script.html" %}
+    <div id="link-form">
+        {{ link_form }}
+    </div>
 </div>
