--- a/ledger/templates/api/views/payables-receivables.html
+++ b/ledger/templates/api/views/payables-receivables.html
@@ -16,5 +16,12 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div id="balances-table">
+                    {{ balances_table }}
+                </div>
+            </div>
+        </div>
     </div>
 </div>
