--- a/ledger/templates/api/views/payables-receivables.html
+++ b/ledger/templates/api/views/payables-receivables.html
@@ -22,6 +22,10 @@
                     {{ balances_table }}
                 </div>
             </div>
+            <div class="col-md-6">
+                <div id="history-table">
+                </div>
+            </div>
         </div>
     </div>
 </div>
