Fixed some issues around when the transactions are empty

--- a/ledger/templates/api/views/payables-receivables.html
+++ b/ledger/templates/api/views/payables-receivables.html
@@ -12,7 +12,9 @@
             </div>
             <div class="col-md-4">
                 <div id="form">
-                    {{ form}}
+                    {% if form %}
+                        {{ form}}
+                    {% endif %}
                 </div>
             </div>
         </div>
